# financial-agent-demo

./: README.md  Self Evaluation.md  docker-compose.yml  overall_design_document.md  podman_build_instructions.md  update_all_packages.sh
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/src/: app.py
backend/src/clients/: capability_map.py  models.py
backend/src/components/: __init__.py  assistants.py  message_strategies.py  shared_nodes.py  tools.py
backend/src/components/fraud/: analyzer.py  baseline.py
backend/src/config/: __init__.py  config.yaml  settings.py
backend/src/config/prompts/: system_prompt.md
backend/src/graphs/: __init__.py  base_graph.py  chat_graph.py  document_processing.py
backend/src/models/: __init__.py  schemas.py  states.py
backend/src/services/: __init__.py  session_service.py
backend/src/streaming/: __init__.py  events.py  orchestrator.py  processors.py
backend/src/utils/: __init__.py  multimodal.py
backend/tests/: conftest.py  test_api_endpoints.py  test_chat_graph.py  test_client_models.py  test_compatiblity_map.py  test_config.py  test_session_service.py
frontend/src/: api_client.py  app.py
