[tool.poetry]
name = "rag-backend"
version = "0.1.0"
description = "Backend API for RAG application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
langchain = "^1.2.6"
langchain-ollama = "^1.0.1" 
langchain-community = "^0.4.1"
python-multipart = "^0.0.21"
langgraph = "^1.0.7"
langchain-google-genai = "^4.2.0"
langchain-anthropic = "^1.3.1"
langchain-openai = "^1.1.7"
yfinance = "^1.0"
langchain-experimental = "^0.4.1"
langchain-core = "^1.2.7"
langchain-aws = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
httpx = "^0.28.1"
mypy = "^1.8.0"
black = "^26.1.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
